[gd_scene load_steps=13 format=3 uid="uid://c6nsmtmqmj0b8"]

[ext_resource type="Texture2D" uid="uid://26hxrikjooy1" path="res://Textures/inventory.png" id="1_74rkx"]
[ext_resource type="Script" path="res://Scripts/UI/player_ui.gd" id="1_goatr"]
[ext_resource type="Texture2D" uid="uid://7vhj3y1japyb" path="res://Textures/SillouetteGunslinger_Grayscale.png" id="2_1d0fr"]
[ext_resource type="PackedScene" uid="uid://irhtrmjy0jep" path="res://Scenes/UI/ability_sticker.tscn" id="4_7ftmd"]
[ext_resource type="Texture2D" uid="uid://b8w5ah14x3qfs" path="res://Textures/TurnDisc.png" id="4_ceglh"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_grqqq"]

[sub_resource type="Animation" id="Animation_1xtmh"]
resource_name = "BeginGame"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerUI1/DisplayAnchor/TurnDial:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667, 1.53333),
"transitions": PackedFloat32Array(2.21914, 1, 1),
"update": 0,
"values": [-8.93609, 0.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerUI1/DisplayAnchor/TurnDial:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.966667, 1.53333),
"transitions": PackedFloat32Array(2.21914, 1, 1),
"update": 0,
"values": [Vector2(-512, -136), Vector2(128, -136), Vector2(128, -136)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerUI1/DisplayAnchor/TurnDial/Node:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.56667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerUI1/DisplayAnchor/TurnDial/Node:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.56667, 2.03333, 2.06667, 2.26667),
"transitions": PackedFloat32Array(0.420448, 1, 1, 1),
"update": 0,
"values": [Vector2(0.25, 0.25), Vector2(7, 7), Vector2(6, 6), Vector2(6, 6)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerUI1/DisplayAnchor/TurnDial/Node:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.56667, 1.66667),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/path = NodePath("PlayerUI1/DisplayAnchor/Inventory/Start:position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(2.13333, 2.6),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(-50, 0), Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = false
tracks/6/path = NodePath("PlayerUI1/DisplayAnchor/Inventory/Center:position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(2.13333, 2.6),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(-50, 0), Vector2(64, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = false
tracks/7/path = NodePath("PlayerUI1/DisplayAnchor/Inventory/End:position")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(2.13333, 2.6),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(-50, 0), Vector2(128, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("PlayerUI1/DisplayAnchor/Inventory:position")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(2.1, 2.36667, 2.53334),
"transitions": PackedFloat32Array(1, 2, 1),
"update": 0,
"values": [Vector2(200, -112), Vector2(270, -112), Vector2(248, -112)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("PlayerUI1/DisplayAnchor/Inventory:scale")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(2.1, 2.36667, 2.53334, 2.76667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.25, 2), Vector2(4, 2), Vector2(2, 2), Vector2(2, 2)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("PlayerUI1/DisplayAnchor/TurnDial:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(2.1, 2.13333, 2.26667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.48, 0.48), Vector2(0.5, 0.5)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("PlayerUI1/DisplayAnchor/AnimatedCharacterSprite:position")
tracks/11/interp = 2
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(4.23333, 4.53333, 4.8, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-185, 400), Vector2(-165, 45), Vector2(198, -338), Vector2(198, -338)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("PlayerUI1/DisplayAnchor/TurnDial/Node/AbilitySticker/Sprite2D:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(4.1, 4.23333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.14902, 0.505882, 0.164706, 0), Color(0.123402, 0.739866, 0.559639, 0.666667)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("PlayerUI1/DisplayAnchor/Inventory/Center:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(1.26667, 2.13333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("PlayerUI1/DisplayAnchor/Inventory:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 2.13333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_nufv0"]
resource_name = "BeginTurn"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerUI1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(0.5, 0.5, 1),
"update": 0,
"values": [Color(0.533333, 0.529412, 0.529412, 1), Color(0.533333, 0.529412, 0.529412, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerUI1/DisplayAnchor/TurnDial:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-6.28319, 0.0, 0.0]
}
tracks/2/type = "animation"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerUI1/DisplayAnchor/TurnDial/Node/AbilitySticker/AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": PackedStringArray("ShowIndicator"),
"times": PackedFloat32Array(0.833333)
}

[sub_resource type="Animation" id="Animation_m06ku"]
resource_name = "BeginTurn2"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:anchors_preset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerUI1/DisplayAnchor/TurnDial:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.3, 0.566667, 1.9, 2.4, 2.5, 2.7, 2.96667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0, -0.469494, -18.8496, -37.6991, 12.5664, 0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerUI1/DisplayAnchor/TurnDial:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.266667, 0.3, 0.566667, 0.833334, 2.13333, 2.4, 2.5, 2.7, 2.96667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(129, -81), Vector2(129, -81), Vector2(129, -81), Vector2(125, -81), Vector2(125, -81), Vector2(125, -81), Vector2(125, -81), Vector2(-200, -81), Vector2(600, -81), Vector2(-89, -81), Vector2(-89, -81)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerUI1/DisplayAnchor/Inventory:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.53333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerUI1/DisplayAnchor/Inventory/Start:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.26667, 1.73333),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerUI1/DisplayAnchor/Inventory/Center:position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.26667, 1.73333),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(64, 0), Vector2(10, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PlayerUI1/DisplayAnchor/Inventory/End:position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.26667, 1.73333),
"transitions": PackedFloat32Array(0.6, 0.5),
"update": 0,
"values": [Vector2(128, 0), Vector2(10, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("PlayerUI1/DisplayAnchor/Inventory:position")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("PlayerUI1/DisplayAnchor/Inventory:scale")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(1.2, 1.46667, 1.66667, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(2.5, 2), Vector2(3, 2), Vector2(2, 2), Vector2(2, 2)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("PlayerUI1/DisplayAnchor/TurnDial:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(2.36667, 2.4, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_ybh7m"]
resource_name = "EndTurn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerUI1:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(0.25, 0.2475, 0.2475, 1)]
}

[sub_resource type="Animation" id="Animation_3qqc5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerUI1/DisplayAnchor/TurnDial:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerUI1/DisplayAnchor/TurnDial:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(128, -100)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerUI1/DisplayAnchor/Inventory/Start:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerUI1/DisplayAnchor/Inventory/Center:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(64, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerUI1/DisplayAnchor/Inventory/End:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(128, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerUI1/DisplayAnchor/Inventory:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(248, -57)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PlayerUI1/DisplayAnchor/Inventory:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("PlayerUI1/DisplayAnchor/TurnDial:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("PlayerUI1/DisplayAnchor/TurnDial:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("PlayerUI1:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("PlayerUI1/DisplayAnchor/AnimatedCharacterSprite:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(185.333, 46.6667)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("PlayerUI1/DisplayAnchor/TurnDial/Node:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 3)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("PlayerUI1/DisplayAnchor/Inventory/Center:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("PlayerUI1/DisplayAnchor/Inventory:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5dwy3"]
_data = {
"BeginGame": SubResource("Animation_1xtmh"),
"BeginTurn": SubResource("Animation_nufv0"),
"BeginTurn2": SubResource("Animation_m06ku"),
"EndTurn": SubResource("Animation_ybh7m"),
"RESET": SubResource("Animation_3qqc5")
}

[node name="PlayerUI1" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
script = ExtResource("1_goatr")

[node name="DisplayAnchor" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.75, 0.75)

[node name="AnimatedCharacterSprite" type="TextureRect" parent="DisplayAnchor"]
self_modulate = Color(0.223529, 0.0156863, 0.129412, 1)
z_index = -100
custom_minimum_size = Vector2(256, 256)
layout_mode = 0
offset_left = 198.0
offset_top = -338.0
offset_right = 454.0
offset_bottom = -82.0
texture = ExtResource("2_1d0fr")
expand_mode = 2
stretch_mode = 5

[node name="Inventory" type="Control" parent="DisplayAnchor"]
z_index = -20
material = SubResource("CanvasItemMaterial_grqqq")
layout_mode = 3
anchors_preset = 0
offset_left = 248.0
offset_top = -112.0
offset_right = 248.0
offset_bottom = -112.0
scale = Vector2(2, 2)

[node name="Start" type="Sprite2D" parent="DisplayAnchor/Inventory"]
texture = ExtResource("1_74rkx")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="Center" type="Sprite2D" parent="DisplayAnchor/Inventory"]
position = Vector2(64, 0)
texture = ExtResource("1_74rkx")
region_enabled = true
region_rect = Rect2(128, 0, 64, 64)

[node name="AbilitySticker" parent="DisplayAnchor/Inventory/Center" instance=ExtResource("4_7ftmd")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -64.0
offset_right = 32.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = null

[node name="End" type="Sprite2D" parent="DisplayAnchor/Inventory"]
visible = false
position = Vector2(128, 0)
texture = ExtResource("1_74rkx")
region_enabled = true
region_rect = Rect2(128, 0, 64, 64)

[node name="TurnDial" type="Sprite2D" parent="DisplayAnchor"]
z_index = 1
position = Vector2(128, -136)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ceglh")

[node name="Node" type="Node2D" parent="DisplayAnchor/TurnDial"]
scale = Vector2(6, 6)

[node name="AbilitySticker" parent="DisplayAnchor/TurnDial/Node" instance=ExtResource("4_7ftmd")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="DisplayAnchor"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_5dwy3")
}
autoplay = "BeginGame"

[connection signal="animation_finished" from="DisplayAnchor/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
